# sentinel-health

./: .env.example  .gitignore  HACKATHON.md  PRD.md  README.md  SENTINEL_HEALTH.md  main.py  pyproject.toml
.harness/: CLAUDE.md  README.md  TODO.md  heartbeat.sh  install.sh  run_all.sh  uninstall.sh
app/: __init__.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  llm.py
app/knowledge/: __init__.py  loader.py
app/knowledge/data/: conditions.json  red_flags.json  triage_rules.json
app/services/: __init__.py  diagnosis.py  safety.py
demo/: index.html
tests/: conftest.py  eval_cases.py  test_diagnosis.py
tests/cases/: clinical_cases.json
tests/integration/: test_api.py
tests/unit/: test_diagnosis.py  test_knowledge.py  test_safety.py
